<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterPasswordActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <ImageView
        android:src="@drawable/icon_enterpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#ff00"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/enter_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_custom_stroke"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:gravity="center"
            android:textColorHint="#000000"
            android:background="@drawable/shape_custom_edittext"
            android:layout_weight="9"
            android:textSize="18sp"
            android:drawableStart="@drawable/icon_lock"
            android:maxLength="6"
            android:hint="@string/enter_pass_here"
            android:id="@+id/editTextPassword"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <ImageView
            android:onClick="ShowHidePass"
            android:id="@+id/imageViewHideShowEnter"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/icon_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <TextView
        android:visibility="gone"
        android:textColor="#ff00"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/six_digits"
        android:id="@+id/txtError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_custom_button"
            android:id="@+id/buttonEnter"
            android:layout_marginTop="10dp"
            android:text="@string/confirmbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_custom_button"
            android:id="@+id/buttonReset"
            android:layout_marginTop="10dp"
            android:text="@string/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:textColor="#ff0000ff"
        android:text="@string/forgot_the_password"
        android:id="@+id/textViewForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</LinearLayout>