<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <ImageView
        android:id="@+id/imageViewWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon_warning" />

    <TextView
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="#ff00"
        android:textSize="24sp"
        android:id="@+id/textViewHeaderWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_pass" />

    <TextView
        android:textStyle="italic"
        android:textColor="#3F51B5"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="18sp"
        android:id="@+id/textViewMessageWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_change_pass" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:background="@drawable/shape_custom_button"
            android:layout_marginRight="10dp"
            android:id="@+id/buttonYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <Button
            android:background="@drawable/shape_custom_button"
            android:layout_marginLeft="10dp"
            android:id="@+id/buttonNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no" />

    </LinearLayout>


</LinearLayout>